# Ergon

./: CMakeLists.txt  LICENSE  README.md
Talos/: CMakeLists.txt  alu.h  asm_interpreter.h  core.h  cpu.h  mother_board.h  utils.h
Talos/include/: alu.h  asm_interpreter.h  core.h  cpu.h  env_manager.h  environment_manager.h  error.h  mother_board.h  utils.h
Talos/include/ASM/: asm_interpreter.h  decoder.h
Talos/include/COMPUTER/: alu.h  core.h  cpu.h  mother_board.h
Talos/include/asm/: data.h  decoder.h  error.h  instructions.h  interpreter.h  linker.h  parser.h  utils.h  variables.h
Talos/include/computer/: alu.h  core.h  cpu.h  fpu.h  memory.h  mother_board.h  op_handler.h
Talos/include/computer/instructions_handler/: run_handler.h  step_handler.h
test/: CMakeLists.txt  test.cpp
tests/test_0/: CMakeLists.txt  test_0.cpp
tests/test_1/: CMakeLists.txt  test_1.cpp
